--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-table": "^8.21.2",
     "@types/react-table": "^7.7.20",
     "framer-motion": "^12.5.0",
+    "lucide-react": "^0.485.0",
     "react": "^19.0.0",
     "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0"
