fix: correct imports paths in components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "typeRoots": ["./node_modules/@types", "./src/types"],
     "paths": {
       "@/*": ["./src/*"],
+      "@components": ["./src/components"],
       "@components/*": ["./src/components/*"],
       "@lib/*": ["./src/lib/*"],
       "@utils/*": ["./src/lib/utils/*"]
